# zeek-clickhouse

./: .gitignore  CMakeLists.txt  COPYING  DEVELOPMENT.md  INSTALL.md  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SUMMARY.md
cmake/: ConfigurePackaging.cmake  ZeekPlugin.cmake
examples/: README.md  security-events.zeek  simple-watchlist.zeek  threat-intel.zeek
scripts/: __load__.zeek  clickhouse.zeek
src/: ClickHouse.cc  ClickHouse.h  Plugin.cc  Plugin.h  clickhouse.bif
